--- a/AboutMe/Storyboards/Base.lproj/Main.storyboard
+++ b/AboutMe/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3B2-Ga-0ei">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LqG-aJ-pPX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -106,7 +106,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="267" y="55"/>
+            <point key="canvasLocation" x="2012" y="55"/>
         </scene>
         <!--Hello View Controller-->
         <scene sceneID="EmW-C1-mU3">
@@ -116,25 +116,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello," textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg9-VQ-b7s">
-                                <rect key="frame" x="40" y="144" width="354" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello," textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg9-VQ-b7s">
+                                <rect key="frame" x="40" y="144" width="354" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="krx-6v-Nsq"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="👋🏻" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fqb-Cy-NWo">
-                                <rect key="frame" x="171" y="411" width="73" height="74"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="74" id="7Wn-Cy-NvU"/>
-                                    <constraint firstAttribute="width" constant="73" id="FmB-yI-cWc"/>
-                                </constraints>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="56"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zD5-TX-cwp">
                                 <rect key="frame" x="157" y="751" width="100" height="31"/>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
@@ -154,16 +144,23 @@
                                     <segue destination="VOr-gC-zL9" kind="unwind" unwindAction="unwindFor:towards:" id="6wo-pe-Jvm"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋🏻" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ar5-zk-phr">
+                                <rect key="frame" x="174.5" y="412" width="65" height="72"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Qxr-RL-ceL"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
                             <constraint firstItem="Qxr-RL-ceL" firstAttribute="trailing" secondItem="Hg9-VQ-b7s" secondAttribute="trailing" constant="20" id="1zR-HK-tzf"/>
-                            <constraint firstItem="fqb-Cy-NWo" firstAttribute="leading" secondItem="Qxr-RL-ceL" secondAttribute="leading" constant="171" id="7xE-IV-6BE"/>
                             <constraint firstItem="Qxr-RL-ceL" firstAttribute="bottom" secondItem="zD5-TX-cwp" secondAttribute="bottom" constant="80" id="F81-kU-GOR"/>
+                            <constraint firstItem="Qxr-RL-ceL" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ar5-zk-phr" secondAttribute="trailing" symbolic="YES" id="LGg-4q-ELX"/>
                             <constraint firstItem="Hg9-VQ-b7s" firstAttribute="leading" secondItem="Qxr-RL-ceL" secondAttribute="leading" constant="40" id="U7X-Xb-Ely"/>
                             <constraint firstItem="Hg9-VQ-b7s" firstAttribute="top" secondItem="Qxr-RL-ceL" secondAttribute="top" constant="100" id="WCt-Hd-aod"/>
-                            <constraint firstItem="fqb-Cy-NWo" firstAttribute="centerY" secondItem="5MQ-h5-eZ6" secondAttribute="centerY" id="dOu-5e-MfL"/>
+                            <constraint firstItem="ar5-zk-phr" firstAttribute="centerX" secondItem="5MQ-h5-eZ6" secondAttribute="centerX" id="ewl-m4-uCX"/>
+                            <constraint firstItem="ar5-zk-phr" firstAttribute="centerY" secondItem="5MQ-h5-eZ6" secondAttribute="centerY" id="wxg-Bf-k9f"/>
                             <constraint firstItem="zD5-TX-cwp" firstAttribute="centerX" secondItem="5MQ-h5-eZ6" secondAttribute="centerX" id="yg5-vW-MYe"/>
                         </constraints>
                     </view>
@@ -174,30 +171,29 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b48-jF-ZzS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="VOr-gC-zL9" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1018.840579710145" y="54.910714285714285"/>
+            <point key="canvasLocation" x="2828.985507246377" y="54.910714285714285"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="GKP-xz-Dhb">
+        <!--Item-->
+        <scene sceneID="wOu-Tc-3Oi">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="3B2-Ga-0ei" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="LqG-aJ-pPX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="zf5-sk-mrP"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iql-xc-7pt">
+                    <navigationItem key="navigationItem" id="Knf-wK-nEE"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="o37-hb-h4q">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fIf-4W-5Kl"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="BEz-7x-Qlj"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nra-v4-3bG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RZh-DA-k4i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-514" y="50"/>
+            <point key="canvasLocation" x="1183" y="45"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
